<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_view_log"
        android:title="@string/pref_view_log" />

    <PreferenceCategory android:title="@string/pref_experimental_features">

        <Preference
            android:summary="@string/pref_experimental_features_explain"
            android:selectable="false" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_location_streaming_enabled"
            android:title="@string/pref_on_demand_location_streaming" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screen_share_enabled"
            android:title="@string/pref_screen_share" />

        <Preference
            android:key="pref_webxdc_store_url"
            android:title="@string/webxdc_store_url"
            android:summary="@string/none" />

    </PreferenceCategory>

</PreferenceScreen>