<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.preferences.widgets.ProfilePreference
        android:key="preference_category_profile" />

    <Preference
        android:key="preference_category_account"
        android:title="@string/pref_account"
        android:icon="@drawable/ic_person"
        android:layout="@layout/preference_item" />

    <Preference
        android:key="preference_category_chats"
        android:title="@string/pref_chats"
        android:icon="@drawable/ic_forum_24dp"
        android:layout="@layout/preference_item" />

    <Preference
        android:key="preference_category_notifications"
        android:title="@string/pref_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:layout="@layout/preference_item" />

    <Preference
        android:key="preference_category_appearance"
        android:title="@string/pref_appearance"
        android:icon="@drawable/ic_brightness_6_24dp"
        android:layout="@layout/preference_item" />

    <Preference
        android:key="preference_category_privacy"
        android:title="@string/pref_privacy_security"
        android:icon="@drawable/ic_lock"
        android:layout="@layout/preference_item" />

    <Preference
        android:key="preference_category_network"
        android:title="@string/pref_network"
        android:icon="@drawable/ic_swap_vert_24dp"
        android:layout="@layout/preference_item" />

    <!-- Nova Chat: MuHan Intelligence AI assistant -->
    <Preference
        android:key="preference_category_muhan_ai"
        android:title="@string/muhan_ai_title"
        android:icon="@drawable/ic_muhan_ai_24dp"
        android:layout="@layout/preference_item" />

    <PreferenceCategory>

        <Preference
            android:key="preference_category_advanced"
            android:title="@string/menu_advanced"
            android:icon="@drawable/ic_advanced_24dp"
            android:layout="@layout/preference_item" />

        <!-- Nova Chat: the "Donate" and "Help" entries were removed; an "About" page
             replaced them. -->
        <Preference
            android:key="preference_category_about"
            android:title="@string/about_title"
            android:icon="@drawable/ic_info_24dp"
            android:layout="@layout/preference_item" />

    </PreferenceCategory>

</PreferenceScreen>